Fix positioning/sizing on Firefox

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -71,6 +71,16 @@ h1.site-title {
     text-align: center;
     max-height: 100%;
     height: 100%;
+    width: 100%;
+    position: relative;
+}
+
+.picture-absolute { /* enforce correct positioning on Firefox */
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .picture-egg {
